<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Courses">

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:text="@string/currentDate"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp" />

    <Button
        android:id="@+id/courseButton1"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="#ffffff"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_courses"
        android:layout_marginBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="232dp"
        android:onClick="onCoursesButtonClicked"
        android:text="@string/courseButton1" />

    <Button
        android:id="@+id/courseButton2"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="#ffffff"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_courses"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/courseButton1"
        android:layout_centerHorizontal="true"
        android:onClick="onCoursesButtonClicked"
        android:text="@string/courseButton2" />

    <Button
        android:id="@+id/courseButton3"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="#ffffff"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_courses"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/courseButton2"
        android:layout_centerHorizontal="true"
        android:onClick="onCoursesButtonClicked"
        android:text="@string/courseButton3" />

    <Button
        android:id="@+id/courseButton4"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="#ffffff"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseButton3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ripple_courses"
        android:onClick="onCoursesButtonClicked"
        android:text="@string/courseButton4" />
</RelativeLayout>