<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayDatabasesActivity">

    <Button
        android:id="@+id/facultyDatabaseButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/ripple_welcome_screen_buttons"
        android:onClick="facultyButtonClicked"
        android:text="@string/facultyDatabaseButton"
        android:fontFamily="@font/product_sans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/courseDatabaseButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/ripple_welcome_screen_buttons"
        android:onClick="courseButtonClicked"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/courseDatabaseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facultyDatabaseButton" />

    <Button
        android:id="@+id/attendanceDatabaseButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ripple_welcome_screen_buttons"
        android:onClick="attendanceButtonClicked"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/attendanceDatabaseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseDatabaseButton" />

    <Button
        android:id="@+id/button7"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="40dp"
        android:onClick="deleteAllDatabasesButtonClicked"
        android:textColor="#FFF"
        android:fontFamily="@font/product_sans_regular"
        android:background="@drawable/ripple_courses"
        android:text="@string/deleteDatabasesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendanceDatabaseButton" />
</android.support.constraint.ConstraintLayout>